--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,15 +1,21 @@
 AllCops:
+  TargetRubyVersion: 3.4
   NewCops: enable
-  TargetRubyVersion: 2.6
-  SuggestExtensions: false
 
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: single_quotes
 
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
+Style/Documentation:
+  Enabled: false
 
 Layout/LineLength:
   Max: 120
+
+Metrics/MethodLength:
+  Max: 20
+
+Metrics/BlockLength:
+  Exclude:
+    - 'test/**/*'
+    - '*.gemspec'
